--- a/clubs.html
+++ b/clubs.html
@@ -227,7 +227,7 @@
                     <a href = ""
                     class = "three60-view"
                     target = "_blank">
-                        <img src = "https://www.nitj.ac.in/WREC21/assets/img/NIT-JALANDHAR.jpg"
+                        <img src = "images/img1.png"
                             class = "view-img rounded-sm"
                             alt = "360 view of campus">
                     </a>
