--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
             <div class = "bg-[#AFBAC4] rounded">
                 <div class="clubOne">
                     <h1 class="px-6 py-4 rounded-t-lg text-3xl md:font-semibold md:text-lg md:px-4 md:py-2 text-white bg-[#2167A7]">R-Tist Club</h1>
-                    <div class="info grid grid-cols-2 gap-4 py-4">
-                        <img src="images/rtistClub.png" class="px-4 object-fill">
+                    <div class="info grid grid-cols-1 md:grid-cols-2 gap-4 py-4">
+                        <div class="md:relative rounded-sm mx-2">
+                            <img src="images/rtistClub.png" class="md:absolute h-full w-full object-fill">
+                        </div>
+                        
                         <div>
                             <p class="text-2xl pr-4 md:text-sm">The club is all about robotics. This club serves as a platform for students to enhance their robotic skills and contribute for the development of the college and society as well. It focuses on IoT and robotics, utilizing it in such a way that students get best out of it, thus passing on the sam...</p>
                             <a class="hover:cursor-pointer hover:text-gray-600 underline text-[#2167A7] text-2xl md:text-sm">Read more</a>
@@ -23,8 +26,10 @@
 
                 <div class="clubTwo">
                     <h1 class="px-6 py-4 text-3xl md:font-semibold md:text-lg md:px-4 md:py-2 text-white bg-[#2167A7]">Criminalz Crew (Dance Club)</h1>
-                    <div class="info grid grid-cols-2 gap-4 py-4">
-                        <img src="images/danceClub.png" class="px-4 object-fill">
+                    <div class="info grid grid-cols-1 md:grid-cols-2 gap-4 py-4">
+                        <div class="md:relative rounded-sm mx-2">
+                            <img src="images/danceClub.png" class="md:absolute h-full w-full object-fill">
+                        </div>
                         <div>
                             <p class="text-2xl pr-4 md:text-sm">Official dance club of NITJ. Have participated in many competitions and won more than that. Always been a showstopper. Energetic dance performance with conceptualized choregraphy to pass down the meaning and concept to audience along with graceful performance. It seems re... </p>
                             <a class="hover:cursor-pointer hover:text-gray-600 underline text-[#2167A7] text-2xl md:text-sm">Read more</a>
@@ -36,7 +41,9 @@
                 <div class="clubThree">
                     <h1 class="px-6 py-4 text-3xl md:font-semibold md:text-lg md:px-4 md:py-2 text-white bg-[#2167A7]">Fine Arts Society</h1>
                     <div class="info grid grid-cols-2 gap-4 py-4">
-                        <img src="images/danceClub.png" class="px-4 object-fill">
+                        <div class="relative rounded-sm mx-2">
+                            <img src="images/rtistClub.png" class="absolute h-full w-full object-fill">
+                        </div>
                         <div>
                             <p class="text-2xl pr-4 md:text-sm">Official dance club of NITJ. Have participated in many competitions and won more than that. Always been a showstopper. Energetic dance performance with conceptualized choregraphy to pass down the meaning and concept to audience along with graceful performance. It seems re... </p>
                             <a class="hover:cursor-pointer hover:text-gray-600 underline text-[#2167A7] text-2xl md:text-sm">Read more</a>
@@ -48,7 +55,9 @@
                 <div class="clubFour">
                     <h1 class="px-6 py-4 text-3xl md:font-semibold md:text-lg md:px-4 md:py-2 text-white bg-[#2167A7]">WDMC Club</h1>
                     <div class="info grid grid-cols-2 gap-4 py-4">
-                        <img src="images/danceClub.png" class="px-4 object-fill">
+                        <div class="relative rounded-sm mx-2">
+                            <img src="images/rtistClub.png" class="absolute h-full w-full object-fill">
+                        </div>
                         <div>
                             <p class="text-2xl pr-4 md:text-sm">Official dance club of NITJ. Have participated in many competitions and won more than that. Always been a showstopper. Energetic dance performance with conceptualized choregraphy to pass down the meaning and concept to audience along with graceful performance. It seems re... </p>
                             <a class="hover:cursor-pointer hover:text-gray-600 underline text-[#2167A7] text-2xl md:text-sm">Read more</a>
